fix light/dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,6 @@
 .app {
   width: 700px;
-  background-color: light-dark(var(--light-main-bg), var(--dark-bg));
   box-shadow: rgba(0, 0, 0, .5) 0 3px 7px;
-  border: 2px solid light-dark(var(--light-border), var(--dark-border));
 }
 
 header {
@@ -13,7 +11,6 @@ header {
 }
 
 .header__title {
-  color: light-dark(var(--light-title), var(--dark-title));
   margin: 0;
   font-size: 28px;
 }
@@ -29,7 +26,6 @@ header {
 
   & i {
     font-size: 24px;
-    color: light-dark(var(--light-title), var(--dark-title));
   }
 }
 
@@ -46,16 +42,11 @@ header {
   font-size: 16px;
   font-weight: 500;
   border: none;
-  background-color: light-dark(var(--light-main-bg), var(--dark-bg));
-  color: light-dark(var(--light-input), var(--dark-input));
-  border-bottom: 2px solid light-dark(var(--light-input), var(--dark-input));
   padding: 4px 8px;
 
   &:active,
   &:focus {
     outline: none;
-    border-bottom: 2px solid light-dark(var(--light-title), var(--dark-title));
-    color: light-dark(var(--light-title), var(--dark-title));
   }
 }
 
@@ -68,10 +59,6 @@ header {
   &:hover {
     cursor: pointer;
     opacity: .7;
-  }
-
-  & i {
-    color: light-dark(var(--light-title), var(--dark-title));
   }
 }
 
@@ -89,7 +76,6 @@ header {
 }
 
 .list__title {
-  color: light-dark(var(--light-title), var(--dark-title));
   font-size: 20px;
   margin: 0;
 }
@@ -110,11 +96,9 @@ header {
 
 .todo--completed {
   text-decoration: line-through;
-  text-decoration-color: light-dark(var(--light-text), var(--dark-text));
 }
 
 .list__placeholder {
-  color: light-dark(var(--light-text), var(--dark-text));
   font-size: 16px;
   font-weight: 500;
   margin: 8px 0;
@@ -122,7 +106,6 @@ header {
 }
 
 .todo__content {
-  color: light-dark(var(--light-text), var(--dark-text));
   font-size: 16px;
   font-weight: 500;
   margin-right: 20px;
@@ -130,24 +113,18 @@ header {
 
   &:focus {
     outline: none;
-    border-bottom: 2px solid light-dark(var(--light-text), var(--dark-text));
   }
 }
 
 .todo__line {
   opacity: 0;
   height: 2px;
-  background-color: light-dark(var(--light-text), var(--dark-text));
   flex: 1;
 }
 
 .todo__control {
   margin-left: 16px;
   opacity: 0;
-  
-  & i {
-    color: light-dark(var(--light-text), var(--dark-text));
-  }
 }
 
 .todo__control button {
